--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   </head>
   
   <body>
+    youtube
+    others
     <h1>who's getting the best head</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Hippopotamus_-_04.jpg/1200px-Hippopotamus_-_04.jpg">
+    <img src="https://avatars.githubusercontent.com/u/85786180?v=4">
     Hello there, awesome person! sans undertale
   </body>
       
